# graph

./: .gitignore  README.md  pyproject.toml
otp/call/: build-config.json  router-config.json
otp/rtp/: build-config.json  router-config.json
ott/graph/: __init__.py  builder.py  deployer.py  loader.py  main.py  rtp.py  runner.py
ott/graph/base/: build.py  deploy.py  runner.py
ott/graph/utils/: build.py  cmdline.py  deploy.py
