virtualenvs.create = true
virtualenvs.options.system-site-packages = true

[tool.poetry]
name = "graph"
version = "0.0.1"
description = "OTP graph build & deploy tools"
authors = ["Frank Purcell <fxpurcell@gmail.com>"]
license = "Mozella 2.x"
readme = "README.md"
packages = [{include = "ott/graph"}]

[tool.poetry.dependencies]
python = "^3.9"
tests = {git = "https://github.com/OpenTransitTools/tests.git"}
"ott.utils" = {git = "https://github.com/OpenTransitTools/utils.git", branch = "rtp"}
#"ott.utils" = { path = "../utils/", develop = true}
#tests = { path = "../tests/", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
system-site-packages = true

[tool.poetry.scripts]
rtp-build = "ott.graph.main:rtp.build"
rtp-test = "ott.graph.main:rtp.test"
rtp-start = "ott.graph.main:rtp.start"
rtp-start-new = "ott.graph.main:rtp.start_new"
rtp-package = "ott.graph.main:rtp.package"
rtp-scp = "ott.graph.main:rtp.scp"
rtp-update-v = "ott.graph.main:rtp.update_otp_v"
rtp-make-new-files = "ott.graph.main:rtp.make_new_files"

oldcall-tester = "ott.graph.main:old_call.test"
oldcall-scp = "ott.graph.main:old_call.scp"
oldcall-update-v = "ott.graph.main:old_call.update_otp_v"

#rtp- = "ott.graph.main:rtp.test"
