virtualenvs.create = true
virtualenvs.options.system-site-packages = true

[tool.poetry]
name = "graph"
version = "0.0.1"
description = "OTP graph build & deploy tools"
authors = ["Frank Purcell <fxpurcell@gmail.com>"]
license = "Mozella 2.x"
readme = "README.md"
packages = [{include = "ott/graph"}]

[tool.poetry.dependencies]
python = "^3.9"
tests = {git = "https://github.com/OpenTransitTools/tests.git"}
"ott.utils" = {git = "https://github.com/OpenTransitTools/utils.git", branch = "rtp"}
#"ott.utils" = { path = "../utils/", develop = true}
#tests = { path = "../tests/", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
system-site-packages = true

[tool.poetry.scripts]
build = "ott.graph.main:otp.build"
package = "ott.graph.main:otp.package"
test = "ott.graph.main:otp.test"
start = "ott.graph.main:otp.start"
start-new = "ott.graph.main:otp.start_new"
scp = "ott.graph.main:otp.scp"
update-v = "ott.graph.main:otp.update_otp_v"
make-new-files = "ott.graph.main:otp.make_new_files"
